--- a/styles.css
+++ b/styles.css
@@ -73,12 +73,21 @@ body {
 
 .btn-login-register {
 	color: white;
+  margin-top: 50px;
+  margin-bottom: 20px;
+  display: block;
 }
 
 .btn-login-register:hover {
 	opacity: .8;
 	transition: .3s;
 	cursor: pointer;
+}
+
+.f-text {
+  opacity: .8;
+  float: left;
+  margin: 7px 10px 20px 0px;
 }
 
 .right {
