--- a/styles.css
+++ b/styles.css
@@ -162,6 +162,7 @@ body {
 @media only screen and (max-width: 767px) {
   .setting-box-board {
     height: 25vh;
+    background-color: red !important
   }
 }
 
