--- a/styles.css
+++ b/styles.css
@@ -161,8 +161,7 @@ body {
 
 @media only screen and (max-width: 767px) {
   .setting-box-board {
-    height: 25vh;
-    background-color: red !important
+    height: 145px;
   }
 }
 
