--- a/styles.css
+++ b/styles.css
@@ -159,13 +159,13 @@ body {
 	transition: .3s;
 }
 
-@media only screen and (max-width: 767px) {
+@media only screen and (max-device-width: 767px) {
   .setting-box-board {
     height: 145px;
   }
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-device-width: 600px) {
 	.login-box {
 		width: 90%;
 		margin-top: 60px;
