--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,20 @@ body {
 	text-align: -webkit-center !important;
 }
 
+.link-user:hover {
+  cursor: pointer !important;
+}
+
+.p-username{ 
+  color: white;
+  display: inline;
+}
+
+.icon-user{
+  padding-top: -20px;
+  padding-right: 10px;
+}
+
 .btn-blue {
 	background-color: white !important;
 	border: 2px solid #0d3c67 !important;
@@ -60,6 +74,7 @@ body {
 
 .nav-link{
   margin: 0px 10px;
+  display: inline-block;
 }
 
 .nav-link:hover {
